--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.88"
-crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
+async-channel = "2.3.1"
 tokio = { version = "1.40.0", features = ["full"] }
