--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ anyhow = "1.0.88"
 async-channel = "2.3.1"
 async-trait = "0.1.82"
 bincode = "1.3.3"
+lazy_static = "1.5.0"
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["full"] }
+toml = "0.8.19"
+uuid = { version = "1.10.0", features = ["serde", "v4"] }
