--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ async-trait = "0.1.82"
 bincode = "1.3.3"
 lazy_static = "1.5.0"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 toml = "0.8.19"
 uuid = { version = "1.10.0", features = ["serde", "v4"] }
