--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ anyhow = "1.0.88"
 async-channel = "2.3.1"
 async-trait = "0.1.82"
 bincode = "1.3.3"
+clap = { version = "4.5.17", features = ["derive"] }
+inventory = "0.3.15"
 lazy_static = "1.5.0"
+once_cell = "1.19.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
