--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-channel = "2.3.1"
 async-trait = "0.1.82"
 bincode = "1.3.3"
 clap = { version = "4.5.17", features = ["derive"] }
+ctor = "0.2.8"
 inventory = "0.3.15"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
