--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ async-trait = "0.1.82"
 bincode = "1.3.3"
 clap = { version = "4.5.17", features = ["derive"] }
 ctor = "0.2.8"
+futures = "0.3.30"
 inventory = "0.3.15"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
