--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ inventory = "0.3.15"
 lazy_static = "1.5.0"
 once_cell = "1.19.0"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_bytes = "0.11.15"
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
 toml = "0.8.19"
